force-app/main/default/objects/Case/fields/Affected_Service__c.field-meta.xml
<CustomField>
    <fullName>Affected_Service__c</fullName>
    <label>Affected Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>