force-app/main/default/objects/Case/fields/MSA_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>MSA_Contract_Number__c</fullName>
    <label>MSA Contract #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>